--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@ngx-env/builder": "^18.0.1",
     "echarts": "^5.5.1",
     "ngx-echarts": "^18.0.0",
     "primeicons": "^7.0.0",
