fixed angular.json and test

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,9 @@
             "styles": ["src/styles.css"],
             "scripts": []
           },
+          "ngxEnv": {
+            "define": "_NGX_ENV_"
+          },
           "configurations": {
             "production": {
               "budgets": [
