--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngx-env/builder": "^18.0.1",
     "echarts": "^5.5.1",
     "ngx-echarts": "^18.0.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
