--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 base = "."
 command = "npm run build"
-publish = "dist/test/browser"
+publish = "dist/stocks-project/browser"
 
 [[redirects]]
 from = "/*"
